Coming soon page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,71 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <!-- Character Set -->
+    <meta charset="UTF-8">
+  
+    <!-- Page Description (Important for SEO) -->
+    <meta name="description" content="Journey Script is the best digital marketing and web development team providing innovative solutions. Offering high-quality services in web design, development, SEO, and digital marketing.">
+  
+    <!-- Keywords -->
+    <meta name="keywords" content="Digital Marketing, Web Development, Journey Script, SEO, Web Design, Online Marketing, Social Media Strategy, Custom Development, Tech Solutions">
+  
+    <!-- Viewport for Mobile Responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+    <!-- Author -->
+    <meta name="author" content="Journey Script Team">
+  
+    <!-- Open Graph for Social Media Sharing -->
+    <meta property="og:title" content="Journey Script - Digital Marketing and Web Development Team">
+    <meta property="og:description" content="Journey Script provides premium digital marketing services and web development solutions. Helping businesses grow with innovative strategies and cutting-edge web technologies.">
+    <meta property="og:image" content="assets/Img/logo.png">
+    <meta property="og:url" content="https://www.journey-script.onrender.com/">
+    <meta property="og:type" content="website">
+  
+    <!-- Twitter Card for Sharing on Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Journey Script - Digital Marketing and Web Development">
+    <meta name="twitter:description" content="Journey Script is a leading digital marketing and web development team. We provide innovative strategies and solutions for web design, SEO, and marketing.">
+    <meta name="twitter:image" content="assets/Img/logo.png">
+    <meta name="twitter:creator" content="@YourTwitterHandle">
+  
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/logo.png">
+
+    <title>Journey Script - Best Digital Marketing and Web Development Team</title>
+    
+    <!-- Structured Data for SEO -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Journey Script",
+        "url": "https://www.journey-script.onrender.com/",
+        "logo": "https://www.journey-script.onrender.com/assets/Img/logo.png",
+        "sameAs": [
+          "https://www.facebook.com/JourneyScript",
+          "https://www.twitter.com/JourneyScript",
+          "https://www.linkedin.com/company/journeyscript"
+        ],
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+1-800-123-4567",
+          "contactType": "Customer Support"
+        },
+        "service": {
+          "@type": "Service",
+          "name": "Digital Marketing",
+          "serviceType": "SEO, Social Media Strategy, Content Marketing, Paid Campaigns",
+          "provider": {
+            "@type": "Organization",
+            "name": "Journey Script"
+          }
+        }
+      }
+    </script>
   </head>
+  
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
